<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgfinal"
    tools:context="com.example.views.Login">

    <LinearLayout
        android:id="@+id/ll_main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">


        <ImageView
            android:layout_width="89dp"
            android:layout_height="96dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/skrivelogof1"
            tools:ignore="RtlSymmetry,TextContrastCheck" />

        <EditText
            android:id="@+id/email"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:background="@drawable/btn"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="15dp"
            android:textColorHint="#000000"
            tools:ignore="RtlSymmetry,TextContrastCheck" />

        <EditText
            android:id="@+id/password"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:background="@drawable/btn"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:textColorHint="#000000"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/login"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btncolor"
            android:text="@string/log_in" />

        <TextView
            android:id="@+id/textView3"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/New"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            />

        <Button
            android:id="@+id/register"
            android:layout_width="210dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btncolor"
            android:text="@string/register_or_sign_in" />

        <Button
            android:id="@+id/adminlogin"
            android:layout_width="153dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btncolor"
            android:text="@string/log_in_as_admin" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="#3fff" />

        <TextView
            android:id="@+id/forgetpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/forgot_password"
            android:textColor="#000000" />


    </LinearLayout>

</LinearLayout>
