<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgfinal"
    tools:context="com.example.views.AdminLogin">


    <ImageView
        android:layout_width="98dp"
        android:layout_height="81dp"
        android:layout_marginTop="190dp"
        android:layout_marginStart="152dp"
        app:srcCompat="@drawable/skrivelogof1" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_marginStart="110dp"
        android:layout_marginTop="280dp"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        android:text="@string/welcome_admin" />

    <EditText
        android:id="@+id/adminemail"
        android:layout_width="350dp"
        android:layout_height="59dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="340dp"
        android:autofillHints=""
        android:background="@drawable/btn"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:textColorHint="#000000"
        tools:ignore="RtlSymmetry" />
    <EditText
        android:id="@+id/adminpassword"
        android:layout_width="350dp"
        android:layout_height="59dp"
        android:layout_marginTop="410dp"
        android:layout_marginStart="30dp"
        android:autofillHints=""
        android:background="@drawable/btn"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:textColorHint="#000000"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/adminloginbtn"
        android:layout_width="178dp"
        android:layout_height="55dp"
        android:layout_marginStart="122dp"
        android:layout_marginTop="480dp"
        android:gravity="center"
        android:textSize="15sp"
        android:background="@drawable/btncolor"
        android:textColor="@color/black"
        android:text="@string/log_in" />
    <TextView
        android:id="@+id/adforgetpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="550dp"
        android:layout_marginStart="155dp"
        android:text="@string/forgot_password"
        android:textColor="#000000" />
    <Button
        android:id="@+id/studentlogin"
        android:layout_width="178dp"
        android:layout_height="55dp"
        android:layout_marginTop="580dp"
        android:layout_marginStart="122dp"
        android:text="@string/log_in_as_student"
        android:background="@drawable/btncolor"
        android:textColor="@color/black"
        android:textSize="15sp"/>

</FrameLayout>