<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/fpw"
    tools:context="com.example.views.Forgetpassword">

    <LinearLayout
        android:id="@+id/ll_main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="106dp"
            android:layout_height="135dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/skrivelogof1"
            tools:ignore="RtlSymmetry,TextContrastCheck" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fp1"
            android:layout_marginBottom="15dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="368dp"
            android:layout_height="348dp"
            app:cardBackgroundColor="#30B8B1B1"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            tools:ignore="ExtraText">


            <TextView
                android:id="@+id/textView4"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/fp2"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp"
                tools:ignore="DuplicateIds,SmallSp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="322dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="60dp"
                android:autofillHints=""
                android:background="@drawable/fpet"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="15dp"
                android:textColorHint="#000000"
                tools:ignore="RtlSymmetry" />

            <Button
                android:id="@+id/submit"
                android:layout_width="205dp"
                android:layout_height="50dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="80dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="100dp"
                android:background="@drawable/btncolor"
                android:gravity="center"
                android:text="@string/submit">

            </Button>

            <TextView
                android:id="@+id/backtologin"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="86dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="50dp"
                android:gravity="center"
                android:text="@string/fp3"
                android:textColor="@color/blue"
                android:textStyle="bold" />


        </androidx.cardview.widget.CardView>


    </LinearLayout>


</LinearLayout>